--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -8,8 +8,7 @@
       <div class="text-features">     
         <div class="feature-text">
           <img src="{{ 'lp02-challenge-section-percent-off.png' | asset_url | }}" width="90" height="46" alt="discount-30">
-
-           <b>Curalin </b></div>
+         </div>
         
       </div>     
     </div>
