--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -7,9 +7,19 @@
       <div class="feature-icon"><i class="icofont-check"></i></div>
       <div class="text-features">     
         <div class="feature-text">
-          <img src="{{ 'lp02-challenge-section-percent-off.png' | asset_url | }}" width="90" height="46" alt="discount-30">
+          <b>Curalin</b>
          </div>
         
+      </div>     
+    </div>
+    <div class="feature">
+      <div class="feature-icon"><i class="icofont-check"></i></div>
+      <div class="text-features">     
+        <div class="feature-text">
+          <b>96 delicious recipes
+          </b>organized into weekly plans
+         </div>
+
       </div>     
     </div>
   
