--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -1,12 +1,3 @@
-{% assign features = 'Curalin*
-|<b>96 delicious recipes</b>
-organized into weekly plans*lp02-challenge-section-free.png
-|<b>23 easy-to-do movement and exercise videos</b> at your level*lp02-challenge-section-free.png
-|Free Shipping*
-|<b>24/7 Customer Support </b>(phone, email, or live chat)*
-' | split: '|' %}
-
-
 
 <section id="challenge-features-section">
   <div class="container">
@@ -23,7 +14,7 @@ organized into weekly plans*lp02-challenge-section-free.png
       {% endif %}
       <div class="features-wrap">
         {% if isSecondLP %}
-        {% render 'features-list', features: features, isSecondLP: true %}
+        {% render 'features-list', isSecondLP: true %}
         {% else %}
         {% render 'features-list', product: all_products["30-day-blood-sugar-challenge-pp"], isTotal: true, isLP: true %}
         {% endif %}
