--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -22,6 +22,26 @@
 
       </div>     
     </div>
+
+    <div class="feature">
+      <div class="feature-icon"><i class="icofont-check"></i></div>
+      <div class="text-features">     
+        <div class="feature-text">
+          <b>Free Shipping </b>
+         </div>
+
+      </div>     
+    </div>
+    <div class="feature">
+      <div class="feature-icon"><i class="icofont-check"></i></div>
+      <div class="text-features">     
+        <div class="feature-text">
+          <b>24/7 Customer Support 
+          </b>(phone, email, or live chat)
+         </div>
+
+      </div>     
+    </div>
   
   {% else %}
   {% for prod in product.metafields.custom.bundle-products.value %}
