--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -169,6 +169,7 @@
     padding: 15px 0;
     font-family: "PP Radio Grotesk";
     font-size: clamp(14px, 2vw, 20px);
+    font-weight: 400;
     line-height: 20px;
 
   }
