--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -19,10 +19,12 @@
           <b>96 delicious recipes
           </b>organized into weekly plans
          </div>
+         <div class="feature-price">
+          <img  src="{{ 'lp02-challenge-section-free.png' | asset_url  }}" width="114" height="114" alt="free">
+         </div>
 
       </div>     
     </div>
-
     <div class="feature">
       <div class="feature-icon"><i class="icofont-check"></i></div>
       <div class="text-features">     
