--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -20,7 +20,7 @@
           </b>organized into weekly plans
          </div>
          <div class="feature-price">
-          <img  src="{{ 'lp02-challenge-section-free.png' | asset_url  }}" width="114" height="114" alt="free">
+          <img class="feature-price-img"  src="{{ 'lp02-challenge-section-free.png' | asset_url  }}" width="114" height="114" alt="free">
          </div>
 
       </div>     
@@ -207,6 +207,10 @@
     right: 0;
     top: 20px;
     color:  var(--dark-brown);
+  }
+
+  .features .feature .feature-price .feature-price-img {
+    
   }
 
   .features .feature .feature-price.priceless {
