--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -19,9 +19,9 @@
           <b>96 delicious recipes
           </b>organized into weekly plans
          </div>
-         <div class="feature-price">
+         
           <img class="feature-price-img"  src="{{ 'lp02-challenge-section-free.png' | asset_url  }}" width="114" height="114" alt="free">
-         </div>
+       
 
       </div>     
     </div>
@@ -209,8 +209,11 @@
     color:  var(--dark-brown);
   }
 
-  .features .feature .feature-price .feature-price-img {
-    
+  .features .feature .feature-price-img {
+    width: 89px;
+    position: absolute;
+    right: 0;
+    top: 0px;
   }
 
   .features .feature .feature-price.priceless {
