--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -18,11 +18,18 @@
         <div class="feature-text">
           <b>96 delicious recipes
           </b>organized into weekly plans
-         </div>
-         
+         </div>        
           <img class="feature-price-img"  src="{{ 'lp02-challenge-section-free.png' | asset_url  }}" width="114" height="114" alt="free">
-       
-
+      </div>     
+    </div>
+    <div class="feature">
+      <div class="feature-icon"><i class="icofont-check"></i></div>
+      <div class="text-features">     
+        <div class="feature-text">
+          <b>23 easy-to-do movement and exercise videos 
+          </b>at your level
+         </div>        
+          <img class="feature-price-img"  src="{{ 'lp02-challenge-section-free.png' | asset_url  }}" width="114" height="114" alt="free">
       </div>     
     </div>
     <div class="feature">
