--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -5,10 +5,12 @@
   {% if isSecondLP %}  
     <div class="feature">
       <div class="feature-icon"><i class="icofont-check"></i></div>
-      <div class="text-features">     
+      <div class="text-features"> 
+        <div class="feature-txt-img"> 
+          <h2>1</h2> 
         <div class="feature-text">
           <b>Curalin</b>
-         </div>
+         </div></div>  
         
       </div>     
     </div>
