--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -107,6 +107,9 @@
     </div>
 
     <style>
+      .feature-txt-img {
+        display:flex;
+      }
         .total-value {  
            font-family: 'PP Radio Grotesk';
            font-weight: 700;
