--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -10,7 +10,9 @@
           <h2>1</h2> 
         <div class="feature-text">
           <b>Curalin</b>
-         </div></div>  
+         </div>
+          
+         </div>  
         
       </div>     
     </div>
