--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -109,9 +109,7 @@
     </div>
 
     <style>
-      .feature-txt-img {
-        display:flex;
-      }
+  
         .total-value {  
            font-family: 'PP Radio Grotesk';
            font-weight: 700;
@@ -333,6 +331,9 @@
   .text-features {
     display: flex;
     flex-direction: column;
+  }
+  .text-features .feature-txt-img {
+    display:flex;
   }
 
     .features .feature .feature-text {
