--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -6,7 +6,7 @@
     <div class="feature">
       <div class="feature-icon"><i class="icofont-check"></i></div>
       <div class="text-features"> 
-        <div class="feature-txt-img"> 
+        <div class="feature-txt-img" style="display: flex;"> 
           <h2>1</h2> 
         <div class="feature-text">
           <b>Curalin</b>
@@ -331,9 +331,6 @@
   .text-features {
     display: flex;
     flex-direction: column;
-  }
-  .text-features .feature-txt-img {
-    display:flex;
   }
 
     .features .feature .feature-text {
