--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -7,7 +7,8 @@
       <div class="feature-icon"><i class="icofont-check"></i></div>
       <div class="text-features"> 
         <div class="feature-txt-img" style="display: flex;"> 
-          <h2>1</h2> 
+          <img src="{{ 'lp02-challenge-section-percent-off.png' | asset_url  }}" width="90" height="46" alt="free">
+          </div>     
         <div class="feature-text">
           <b>Curalin</b>
          </div>
