--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -5,12 +5,12 @@
   {% if isSecondLP %}  
     <div class="feature">
       <div class="feature-icon"><i class="icofont-check"></i></div>
-      <div class="text-features"> 
-        <div class="feature-txt-img" style="display: flex;"> 
+      <div class="text-features feature-txt-img"> 
+        
           <img src="{{ 'lp02-challenge-section-percent-off.png' | asset_url  }}" width="90" height="46" alt="free">
           </div>     
-        <div class="feature-text">
-          <b>Curalin</b>
+        
+          <b style="margin-left: -24px; margin-top: 10px;">Curalin</b>
          </div>
           
          </div>  
@@ -332,6 +332,14 @@
   .text-features {
     display: flex;
     flex-direction: column;
+  }
+
+  .text-features.feature-txt-img {
+    flex-direction: row;
+  }
+
+  .text-features.feature-txt-img img {
+    width: 70%;
   }
 
     .features .feature .feature-text {
