--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -5,7 +5,7 @@
   {% if isSecondLP %}  
     <div class="feature">
       <div class="feature-icon"><i class="icofont-check"></i></div>
-      <div class="text-features feature-txt-img"> 
+      <div class="feature-txt-img"> 
         
           <img src="{{ 'lp02-challenge-section-percent-off.png' | asset_url  }}" width="90" height="46" alt="free">
           </div>     
