--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -334,7 +334,8 @@
     flex-direction: column;
   }
 
-  .text-features.feature-txt-img {
+  .feature-txt-img {
+    display: flex;
     flex-direction: row;
   }
 
