--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -5,15 +5,11 @@
   {% if isSecondLP %}  
     <div class="feature">
       <div class="feature-icon"><i class="icofont-check"></i></div>
-      <div class="feature-txt-img"> 
-        
-          <img src="{{ 'lp02-challenge-section-percent-off.png' | asset_url  }}" width="90" height="46" alt="free">
-          </div>     
-        
-          <b style="margin-left: -24px; margin-top: 10px;">Curalin</b>
+      <div class="text-features"> 
+        <div class="feature-txt-img">  
+        <div class="feature-text">
+          <b>Curalin</b>
          </div>
-          
-         </div>  
         
       </div>     
     </div>
@@ -110,7 +106,6 @@
     </div>
 
     <style>
-  
         .total-value {  
            font-family: 'PP Radio Grotesk';
            font-weight: 700;
@@ -332,15 +327,6 @@
   .text-features {
     display: flex;
     flex-direction: column;
-  }
-
-  .feature-txt-img {
-    display: flex;
-    flex-direction: row;
-  }
-
-  .text-features.feature-txt-img img {
-    width: 70%;
   }
 
     .features .feature .feature-text {
