--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -7,7 +7,7 @@
       <div class="feature-icon"><i class="icofont-check"></i></div>
       <div class="text-features">     
         <div class="feature-text">
-          <b>Curalin</b>
+          <img class="feature-price-img"  src="{{ 'lp02-challenge-section-percent-off.png' | asset_url  }}" width="90" height="46" alt="free">
          </div>       
       </div>     
     </div>
