--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -8,6 +8,7 @@
       <div class="text-features">     
         <div class="feature-text img-txt">
           <img src="{{ 'lp02-challenge-section-percent-off.png' | asset_url  }}" width="90" height="46" alt="free">
+          <span class="span-txt">Curalin</span>
          </div>       
       </div>     
     </div>
@@ -217,6 +218,7 @@
     max-width: unset;
     padding-right: unset;
     display: flex;
+    flex-direction: row;
   }
 
   .features .feature .feature-price {
