--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -221,6 +221,12 @@
     flex-direction: row;
   }
 
+  .features .feature .feature-text.img-txt .span-txt {
+    font-size: 40px;
+    font-weight: 700;
+    margin-top: 15px;
+  }
+
   .features .feature .feature-price {
     position: absolute;
     right: 0;
