--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -225,6 +225,7 @@
     font-size: 40px;
     font-weight: 700;
     margin-top: 15px;
+    margin-left: 15px;
   }
 
   .features .feature .feature-price {
