--- a/snippets/features-list.liquid
+++ b/snippets/features-list.liquid
@@ -222,7 +222,7 @@
   }
 
   .features .feature .feature-text.img-txt .span-txt {
-    font-size: 40px;
+    font-size: clamp(22px, 4vw, 40px);
     font-weight: 700;
     margin-top: 15px;
     margin-left: 15px;
