--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -85,7 +85,8 @@
 
 
   #challenge-features-section .cta-btn {
-    grid-row: 2/3;
+    grid-row: {% if isSecondLP %}3/3 {% else %} 2/3 {% endif %};
+    grid-column: 2/3;
     font-weight: 100;
     background: var(--orange);
     text-align: center;
