--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -80,6 +80,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding-top: {% if isSecondLP %}65px{% endif %};
   }
   
 
@@ -112,6 +113,10 @@
 
 
   @media screen and (max-width: 768px) {
+
+    #challenge-features-section .features-wrap {   
+      padding-top: {% if isSecondLP %}unset{% endif %};
+    }
     #challenge-features-section .container {
       padding: 0 15px;
     }
