--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -103,6 +103,7 @@
     max-width: 430px;   
     margin: 0 auto;
     max-height: 60px;
+    margin-top: {% if isSecondLP %}-110px{% endif %};
   }
 
   #challenge-features-section .cta-btn:hover {
@@ -144,7 +145,7 @@
       grid-column: 1/3;
       font-size: 21px;
       line-height: 20px;
-      
+      margin-top: {% if isSecondLP %}unset{% endif %};    
     }
   
     }
