--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -95,7 +95,7 @@
     font-weight: 700;
     font-size: 25px;
     line-height: 26px;
-    color: var(--dark-green);
+    color: {% if isSecondLP %} #ffffff {% else %} var(--dark-green){% endif %};
     padding: 15px 45px;
     box-shadow: 0px 5px 12.5px rgba(0, 0, 0, 0.15);
     transition: unset;
