--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -96,7 +96,7 @@
     font-size: 25px;
     line-height: 26px;
     color: {% if isSecondLP %} #ffffff {% else %} var(--dark-green){% endif %};
-    padding: 15px 45px;
+    padding: {% if isSecondLP %}15px 55px {% else %}15px 45px{% endif %};
     box-shadow: 0px 5px 12.5px rgba(0, 0, 0, 0.15);
     transition: unset;
     margin-bottom: 20px;
