--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -18,5 +18,5 @@ the year right! ", isSecondLP: true %}
 you GET", ctaButtonLink: "/products/curalin-freebies", ctaTitle: "SHOP NOW", isSecondLP: true %}
 {% render 'thirty-day-break-it-down', mainTitle: "New year, same you, but healthier", isSecondLP: true %}
 {% render 'product-all-in-one-easy', isSecondLP: true %}
-{% render 'product-all-in-one-cta-section', isCuralinContent: true, isReviews: true, title: "Select Your Deal:", badgesPosition: "bottom", badgesContent: "free-shipping,money-back,secure-checkout", ctaColor: "var(--dark-green)", bottomLineColor: "black", challenge_value: challenge_value, curaeats_value: curaeats_value %}
+{% render 'product-all-in-one-cta-section-thirty-days', badgesPosition: "cta", badgesContent: "free-shipping,money-back,secure-checkout", isBadges: true, isThirtyDay: true %}
 {% render 'lps-video-reviews', maintitle: 'This helped me like nothing else did' %}
