--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -12,11 +12,9 @@
 ' | split: '|' %}
 
 {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "#ffffff", logoFileName: "curalife-dark-green.png" %}
-{% render 'thirty-day-challenge-hero-banner', mainTitle: "Curalin", subTitle: "Freebies to kick-off
-the year right! ", isSecondLP: true %}
-{% render 'thirty-day-challenge-section', mainTitle: "When you buy Curalin
-you GET", ctaButtonLink: "/products/curalin-freebies", ctaTitle: "SHOP NOW", isSecondLP: true %}
+{% render 'thirty-day-challenge-hero-banner', mainTitle: "Curalin", subTitle: "Freebies to kick-off the year right! ", isSecondLP: true %}
+{% render 'thirty-day-challenge-section', mainTitle: "When you buy Curalin you GET", ctaButtonLink: "#blabla", ctaTitle: "SHOP NOW", isSecondLP: true %}
 {% render 'thirty-day-break-it-down', mainTitle: "New year, same you, but healthier", isSecondLP: true %}
 {% render 'product-all-in-one-easy', isSecondLP: true %}
-{% render 'product-all-in-one-cta-section-thirty-days', badgesPosition: "cta", badgesContent: "free-shipping,money-back,secure-checkout", isBadges: true, isThirtyDay: true %}
+{% render 'product-all-in-one-cta-section-thirty-days', badgesPosition: "cta", badgesContent: "free-shipping,money-back", isBadges: true, isThirtyDay: true %}
 {% render 'lps-video-reviews', maintitle: 'This helped me like nothing else did' %}
