--- a/snippets/lps-video-reviews.liquid
+++ b/snippets/lps-video-reviews.liquid
@@ -174,6 +174,7 @@
     font-size: 40px;
     margin: 0;
     margin-bottom: 30px;
+color: {% if isSecondLP %} var(--dark-green){% endif %};
   }
 
   .video-reviews-section .video-reviews {
