--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -17,4 +17,4 @@
 {% render 'thirty-day-break-it-down', mainTitle: "New year, same you, but healthier", isSecondLP: true %}
 {% render 'product-all-in-one-easy', isSecondLP: true %}
 {% render 'product-all-in-one-cta-section-thirty-days', badgesPosition: "bottom", badgesContent: "free-shipping,money-back", isBadges: true, isThirtyDay: true, isSecondLP: true %}
-{% render 'lps-video-reviews', maintitle: 'This helped me like nothing else did' %}
+{% render 'lps-video-reviews', maintitle: 'This helped me like nothing else did', isSecondLP: true %}
