--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -16,5 +16,5 @@
 {% render 'thirty-day-challenge-section', mainTitle: "When you buy Curalin you GET", ctaButtonLink: "#product-thumbnails", ctaTitle: "SHOP NOW", isSecondLP: true %}
 {% render 'thirty-day-break-it-down', mainTitle: "New year, same you, but healthier", isSecondLP: true %}
 {% render 'product-all-in-one-easy', isSecondLP: true %}
-{% render 'product-all-in-one-cta-section-thirty-days', badgesPosition: "bottom", badgesContent: "free-shipping,money-back", isBadges: true, isThirtyDay: true, isSecondLP: true %}
+{% render 'product-all-in-one-cta-section-thirty-days', badgesPosition: "cta", badgesContent: "free-shipping,money-back", isBadges: true, isThirtyDay: true, isSecondLP: true %}
 {% render 'lps-video-reviews', maintitle: 'This helped me like nothing else did', isSecondLP: true %}
