--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -3,7 +3,7 @@
     <div class="product-image-wrapper">
       {% comment %} If there are multiple images, render the gallery {% endcomment %}
       {% if product.images.size > 1 %}
-        {% render 'product-all-in-one-cta-section-gallery', isCuralinContent: isCuralinContent %}
+        {% render 'product-all-in-one-cta-section-gallery', product: product, isCuralinContent: isCuralinContent %}
       {% else %}
         <img src="{{ product.images[0].src | image_url }}" alt="{{ product.images[0].alt }}" class="product-image" loading="lazy">
         <p class="multiplier">X2</p>
