--- a/snippets/trust-badges-widget.liquid
+++ b/snippets/trust-badges-widget.liquid
@@ -14,7 +14,7 @@
     <div class="trust-badge"><i class="icofont-badge" style="font-size:36px"></i>60 Day Money Back Guarantee</div>
   {% endif %}
 
-  {% if badgesContent contains "money-back" %}
+  {% if badgesContent contains "secure-checkout" %}
     <div class="trust-badge"><i class="icofont-ui-lock"></i>100% Secure Checkout</div>
   {% endif %}
 </div>
