--- a/snippets/trust-badges-widget.liquid
+++ b/snippets/trust-badges-widget.liquid
@@ -1,6 +1,5 @@
 {% if shop.name == "CuraLife" %}
-  {% assign shipping_worldwide = 'FREE WORLDWILD
-  SHIPPING' %}
+  {% assign shipping_worldwide = 'FREE WORLDWILD SHIPPING' %}
 {% elsif shop.name == "CuraLife Global" %}
   {% assign shipping_worldwide = 'Free Shipping Above £99' %}
 {% endif %}
