--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -174,8 +174,13 @@
       margin-right: 10px;
       padding-bottom: unset;
       flex-direction: row;
+      flex-wrap: wrap;
       align-items: center;
       gap: 5px;
+    }
+
+    .variant-box .price p {
+      margin: usnet;
     }
 
     .variant-box .price .calculations {
