--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -16,5 +16,5 @@
 {% render 'thirty-day-challenge-section', mainTitle: "When you buy Curalin you GET", ctaButtonLink: "#product-thumbnails", ctaTitle: "SHOP NOW", isSecondLP: true %}
 {% render 'thirty-day-break-it-down', mainTitle: "New year, same you, but healthier", isSecondLP: true %}
 {% render 'product-all-in-one-easy', isSecondLP: true %}
-{% render 'product-all-in-one-cta-section', product: all_products['30-days-monthly-deals'], isCuralinContent: true, mainTitle: "Including our meal and movement plans <span>FREE</span>", badgesPosition: "cta", badgesContent: "free-shipping,money-back" isHighlightSubtitle: true, isReversed: true, ctaColor: "var(--orange)", bottomLineColor: "var(--light-green)", defaultSelectionIndex: 2, isPricePerUnit: true %}
+{% render 'product-all-in-one-cta-section', product: all_products['30-days-monthly-deals'], isCuralinContent: true, mainTitle: "Including our meal and movement plans <span style="var(--light-green)">FREE</span>", badgesPosition: "cta", badgesContent: "free-shipping,money-back" isHighlightSubtitle: true, isReversed: true, ctaColor: "var(--orange)", bottomLineColor: "var(--light-green)", defaultSelectionIndex: 2, isPricePerUnit: true %}
 {% render 'lps-video-reviews', maintitle: 'This helped me like nothing else did', isSecondLP: true %}
