--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -180,7 +180,7 @@
     }
 
     .variant-box .price p {
-      margin: usnet;
+      margin: unset;
     }
 
     .variant-box .price .calculations {
