--- a/templates/article.recipe.liquid
+++ b/templates/article.recipe.liquid
@@ -245,7 +245,7 @@
     @media screen and (max-width: 768px) {
       #recipe-page h1 {
         font-size: 10vw;
-        margin-bottom: usnet;
+        margin-bottom: unset;
       }
 
       #recipe-page h2 {
