--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -270,7 +270,7 @@
         slidesPerView: {{ product.images.size | minus: 1 }},
       },
       1400: {
-        slidesPerView: {{ product.images.size }},
+          slidesPerView: {% if product.images.size < 5 %}{{ product.images.size }}{% else %}4{% endif %},
       }
     }
   });
