--- a/snippets/product-all-in-one-cta-section-gallery.liquid
+++ b/snippets/product-all-in-one-cta-section-gallery.liquid
@@ -251,7 +251,7 @@
 
 <script>
   productThumbsAllInOne = new Swiper('#product-thumbs-slider-sc', {
-    slidesPerView: auto,
+    slidesPerView: 'auto',
     spaceBetween: 10,
     watchSlidesVisibility: true,
     grabCursor: true,
