--- a/snippets/product-all-in-one-badges-section.liquid
+++ b/snippets/product-all-in-one-badges-section.liquid
@@ -33,11 +33,17 @@
       min-width: 150px
   }
 
-   .badges-section .container .badges .badge-wrapper .badge {
-      border-radius: 50%;
-      border: 1px solid #000;
-      padding: 10px
-  }
+  
+  
+  .badges-section .container .badges .badge-wrapper .badge {
+    border-radius: 50%;
+    border: 1px solid #000;
+    padding: 10px
+}
+
+.badges-section .container .badges .badge-wrapper p {
+  margin: unset;
+}
 
    .badges-section .container .badges .badge-wrapper .badge img {
       height: 50px;
