--- a/snippets/product-all-in-one-cta-section.liquid
+++ b/snippets/product-all-in-one-cta-section.liquid
@@ -1,4 +1,4 @@
-<section class="cta-section">
+<section class="cta-section" id="cta-section">
   <div class="container product-container">
     <div class="product-image-wrapper">
       {% comment %} If there are multiple images, render the gallery {% endcomment %}
@@ -9,7 +9,7 @@
         <p class="multiplier">X2</p>
 
         {% comment %} If Curalin is in the product, render the sale badge {% endcomment %}
-        {% product.metafields.custom.badge_image %}
+        {% if isCuralinContent and product.metafields.custom.badge_image %}
           <img src="{{ product.metafields.custom.badge_image | image_url }}" width="200" height="200" alt="Curalin" class="sale-badge" loading="lazy">
           <style>
             .sale-badge {
