--- a/templates/page.lp02.liquid
+++ b/templates/page.lp02.liquid
@@ -2,7 +2,7 @@
 
 {% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "#ffffff", logoFileName: "curalife-dark-green.png" %}
 {% render 'thirty-day-challenge-hero-banner', mainTitle: "Curalin", subTitle: "Freebies to kick-off the year right! ", isSecondLP: true %}
-{% render 'thirty-day-challenge-section', mainTitle: "When you buy Curalin you GET", ctaButtonLink: "#image-galery", ctaTitle: "SHOP NOW", isSecondLP: true %}
+{% render 'thirty-day-challenge-section', mainTitle: "When you buy Curalin you GET", ctaButtonLink: "#cta-section", ctaTitle: "SHOP NOW", isSecondLP: true %}
 {% render 'thirty-day-break-it-down', mainTitle: "New year, same you, but healthier", isSecondLP: true %}
 {% render 'product-all-in-one-easy', isSecondLP: true %}
 {% render 'product-all-in-one-cta-section', product: all_products['30-days-monthly-deals'], mainTitle: "Including our meal and movement plans <span style='color:var(--light-green)'>FREE</span>", badgesPosition: "cta", badgesContent: "free-shipping,money-back" isHighlightSubtitle: true, isReversed: true, ctaColor: "var(--orange)", defaultSelectionIndex: 2, isPricePerUnit: true %}
