--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -96,7 +96,7 @@
     font-size: 25px;
     line-height: 26px;
     color: {% if isSecondLP %} #ffffff {% else %} var(--dark-green){% endif %};
-    padding: {% if isSecondLP %}15px 55px {% else %}15px 45px{% endif %};
+    padding: {% if isSecondLP %}15px 100px {% else %}15px 45px{% endif %};
     box-shadow: 0px 5px 12.5px rgba(0, 0, 0, 0.15);
     transition: unset;
     margin-bottom: 20px;
@@ -104,6 +104,7 @@
     margin: 0 auto;
     max-height: 60px;
     margin-top: {% if isSecondLP %}-110px{% endif %};
+    margin-left: {% if isSecondLP %}0px{% endif %};
   }
 
   #challenge-features-section .cta-btn:hover {
@@ -114,6 +115,7 @@
   @media screen and (max-width: 1200px) {
     #challenge-features-section .cta-btn {
        margin-top: {% if isSecondLP %}unset{% endif %}; 
+      margin-left: {% if isSecondLP %}unset{% endif %};
     }
   }
 
