--- a/snippets/thirty-day-challenge-section.liquid
+++ b/snippets/thirty-day-challenge-section.liquid
@@ -153,7 +153,8 @@
       grid-column: 1/3;
       font-size: 21px;
       line-height: 20px;
-      margin-left: {% if isSecondLP %}unset{% endif %};      
+      margin-left: {% if isSecondLP %}unset{% endif %};  
+      margin: {% if isSecondLP %}auto{% endif %};  
     }
   
     }
