--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -45,7 +45,7 @@
       {% if original_item_cap_total > var.price %}
         <p class="compared-at-price"><strike class="rounded no-letters">{{ original_item_cap_total | money_without_trailing_zeros }}</strike></p>
       {% endif %}
-      <p class="real-price rounded no-letters">{{ original_item_price | money_without_trailing_zeros }}</p>
+      <p class="real-price rounded no-letters">{{ var.price | money_without_trailing_zeros }}</p>
     </div>
       <p class="per-month">Per Month</p>
     </div>
