--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -73,7 +73,7 @@
     color: #404733;
     font-family: 'PP Radio Grotesk';
     font-weight: 900;
-    font-size: clamp(50px, 7vw, 93px);
+    font-size: clamp(58px, 8vw, 108px);
     position: relative;
     top: 0.5rem;
   }
@@ -82,7 +82,7 @@
       color: {% if isSecondLP %}#ffffff{% else %} var(--dark-green){% endif %};
       font-family: 'PP Radio Grotesk';
       font-weight: 700;
-      font-size:{% if isSecondLP %}clamp(26px, 3vw, 50px){% else %} clamp(26px, 7vw, 62px){% endif %};
+      font-size:{% if isSecondLP %}clamp(26px, 4vw, 55px){% else %} clamp(26px, 7vw, 62px){% endif %};
       {% if isSecondLP %}letter-spacing: -0.02em{% endif %};
       max-width: {% if isSecondLP %}60%{% endif %};
     }
@@ -161,7 +161,7 @@
       }
 
       .plus {
-        top:0;
+        top:0.2rem;
       }
 
       .hero-banner-content .text-button .subtitle {
