--- a/templates/product.freebies.liquid
+++ b/templates/product.freebies.liquid
@@ -5,5 +5,26 @@
 {% render 'thirty-day-challenge-section', mainTitle: "When you buy Curalin you GET", ctaButtonLink: "#cta-section", ctaTitle: "SHOP NOW", isSecondLP: true %}
 {% render 'thirty-day-break-it-down', mainTitle: "New year, same you, but healthier", isSecondLP: true %}
 {% render 'product-all-in-one-easy', isSecondLP: true %}
+<div class="everything">Everything you need for sweet success</div>
 {% render 'product-all-in-one-cta-section', product: all_products['curalin-freebies'], mainTitle: "Including our meal and movement plans <span style='color:var(--light-green)'>FREE</span>", badgesPosition: "cta", badgesContent: "free-shipping,money-back" isHighlightSubtitle: true, isReversed: true, ctaColor: "var(--orange)", defaultSelectionIndex: 2, isPricePerUnit: true %}
 {% render 'lps-video-reviews', maintitle: 'This helped me like nothing else did', isSecondLP: true %}
+
+<style>
+    .everything {
+        margin: 20px auto;
+        font-family: 'PP Radio Grotesk';
+        font-weight: 700;
+        font-size: 40px;
+        line-height: 40px;
+        letter-spacing: -0.01em;
+
+        color: #404733;
+    }
+
+    @media screen and (max-width: 768px) {
+        .everything {
+            font-size: 32px;
+            line-height: 35px;
+        }
+    }
+</style>
