--- a/templates/product.freebies.liquid
+++ b/templates/product.freebies.liquid
@@ -11,14 +11,16 @@
 
 <style>
     .everything {
-        margin: 20px auto;
+        display: flex;
+        padding: 30px;
         font-family: 'PP Radio Grotesk';
         font-weight: 700;
         font-size: 40px;
         line-height: 40px;
         letter-spacing: -0.01em;
-
         color: #404733;
+        justify-content: center;
+        text-align: center;
     }
 
     @media screen and (max-width: 768px) {
