--- a/templates/product.freebies.liquid
+++ b/templates/product.freebies.liquid
@@ -12,7 +12,7 @@
 <style>
     .everything {
         display: flex;
-        padding: 30px;
+        padding: 30px 30px 0;
         font-family: 'PP Radio Grotesk';
         font-weight: 700;
         font-size: 45px;
