--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -233,7 +233,7 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
 }
  .timeline {
     background: #555F44;
-    padding: 50px 0 0 !important;
+    padding:{% unless isSecondLP %} 50px 0 0 !important {% endunless %};
  }
 
  .timeline .container {
