--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -250,7 +250,7 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
     line-height: 35px;
     color: white;
     padding-bottom: 30px;
-    padding-top: 29px;
+    padding-top: {% unless isSecondLP %} 29px {% endunless %};
  }
 
  @-webkit-keyframes pulsate {
