--- a/snippets/thirty-day-challenge-hero-banner.liquid
+++ b/snippets/thirty-day-challenge-hero-banner.liquid
@@ -231,14 +231,19 @@
         height: {% if isSecondLP %} 91vh {% endif %};
       }
     }
+
+
+    @media screen and (max-width: 375px) {
+      .hero-banner {
+        height: {% if isSecondLP %} 80vh {% endif %};
+      }
+    }
   
     @media screen and (max-width: 364px) {
       .hero-banner .main-img-mb {
         top:  {% if isSecondLP %}90vw{% else %}50vw{% endif %};
       }
-      .hero-banner {
-        height: {% if isSecondLP %} 81vh {% endif %};
-      }
+     
     }
   
   
