--- a/templates/product.freebies.liquid
+++ b/templates/product.freebies.liquid
@@ -1,6 +1,6 @@
 {% layout 'theme.lps' %}
 
-{% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "#ffffff", logoFileName: "curalife-dark-green.png", isFlash: true %}
+{% render 'sale-banner', isOnlyLogo: true, desktopContent: "logo", mobileContent: "logo", bgColor: "#ffffff", logoFileName: "curalife-dark-green.png", isLogoSmall: true %}
 {% render 'thirty-day-challenge-hero-banner', mainTitle: "Curalin", subTitle: "Freebies to kick-off the year right! ", isSecondLP: true %}
 {% render 'thirty-day-challenge-section', mainTitle: "When you buy Curalin you GET", ctaButtonLink: "#cta-section", ctaTitle: "SHOP NOW", isSecondLP: true %}
 {% render 'thirty-day-break-it-down', mainTitle: "New year, same you, but healthier", isSecondLP: true %}
