--- a/templates/page.aio-first-page.liquid
+++ b/templates/page.aio-first-page.liquid
@@ -86,7 +86,7 @@ anymore
 health.
 ' | split: '|' %}
 
-{% render 'sale-banner', isHidden: true, isFlash: true, desktopContent: "logo,ctaTitle", mobileContent: "logo,ctaTitle", bgColor: "#F59E80", logoFileName: "logo-black-friday.svg", ctaTitle: "flash" %}
+{% render 'sale-banner', isHidden: true, isFlash: true, desktopContent: "logo,ctaTitle", mobileContent: "logo,ctaTitle", bgColor: "#F59E80", logoFileName: "logo-black-friday.svg", ctaTitle: "flash", isLogoSmall: true %}
 {% render 'aio-first-page-hero-section', isLogo: true %}
 {% render 'partnerships-featured' %}
 {% render 'aio-first-page-meet-curalin', meetCuralins: meetCuralins %}
