--- a/snippets/thirty-day-break-it-down.liquid
+++ b/snippets/thirty-day-break-it-down.liquid
@@ -160,8 +160,8 @@ Big Wins*Set yourself up for success! Have all the support you need from peers a
  <style>
   .break-it-wrapper {
     display: flex;
-    gap: 15%;
-    padding: 50px 0;
+    gap: 11%;
+    padding: 50px 70px;
   }
 
   .time-wrapper {
