--- a/assets/common.scss
+++ b/assets/common.scss
@@ -119,6 +119,7 @@ select {
 	margin: 0;
 }
 [type=checkbox] {
+	display:none;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
 	padding: 0;
