--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -109,6 +109,7 @@
     }
 
     .variant-box .radio-box input[type=radio]:before {
+      display: none;
       content: "";
       display: block;
       position: absolute;
