--- a/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
+++ b/snippets/product-all-in-one-cta-section-actions-variant-box.liquid
@@ -59,6 +59,11 @@
     </div>
   {% endif %}
 </div>
+<style>
+  body {
+    accent-color: black;
+  }
+</style>
 
 {% if isLastRender %}
   <style>
